fix the overflow

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
   margin: 0 auto !important;
 }
 
+
+
 .featured p,
 .top-story p {
   font-family: Arial, Helvetica, sans-serif;
@@ -240,7 +242,7 @@ a {
 
 .card-picture {
   height: 300px;
-  width: 300px;
+  width: 170px;
   position: relative;
 }
 
@@ -801,6 +803,10 @@ svg {
 @media only screen and (min-width: 992px) and (max-width: 1500px) {
   .hidden-nav {
     display: none !important;
+  }
+
+  body {
+    overflow-x: hidden;
   }
 
   main {
